# spenceros

./: .gitignore  Cargo.toml  Makefile  build.rs  flake.nix
.cargo/: config.toml
bootloader/common/: Cargo.toml
bootloader/common/src/: gdt.rs  lib.rs  real_mode.rs
bootloader/common/src/protected_mode/: io.rs  mod.rs
bootloader/config/src/: lib.rs
bootloader/entry/: Cargo.toml  build.rs
bootloader/entry/src/: boot.s  debug.rs  main.rs
bootloader/real_mode/: Cargo.toml  link.ld
bootloader/real_mode/src/: boot.s  debug.rs  main.rs
bootloader/stage-0/: Cargo.toml  build.rs  link.ld
bootloader/stage-0/.cargo/: config.toml
bootloader/stage-0/src/: boot.s  main.rs
bootloader/stage-1/: Cargo.toml  link.ld
bootloader/stage-1/.cargo/: config.toml
bootloader/stage-1/src/: gdt.rs  main.rs  vbe.rs
bootloader/stage-1/src/vbe/: vbe_impl.rs
bootloader/stage-2/: Cargo.toml  link.ld
bootloader/stage-2/.cargo/: config.toml
bootloader/stage-2/src/: common.rs  io.rs  main.rs
bootloader/stage-3/: Cargo.toml  link.ld
bootloader/stage-3/.cargo/: config.toml
bootloader/stage-3/src/: main.rs
src/: boot.s  main.asm  main.rs
tuples/: i386-bit16.json  i386-bit32.json  x86_64-unknown-kernel.json
