[package]
name = "spenceros2"
version = "0.1.0"
edition = "2021"

[dependencies]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
debug = false
overflow-checks = false
# inherits = "release"


[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
debug = false
overflow-checks = false

