[package]
name = "spenceros2"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "./bootloader/config/" }

[build-dependencies]
llvm-tools = "0.1.1"

[workspace]
members = [ "bootloader/common", "bootloader/config","bootloader/entry", "bootloader/real_mode"]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
debug = false
overflow-checks = false
# inherits = "release"


[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
debug = false
overflow-checks = false

