[package]
name = "spenceros"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "./bootloader/common/" }

[build-dependencies]
llvm-tools = "0.1.1"

[workspace]
members = [ 
  "bootloader/common", 
  "bootloader/stage-0", 
  "bootloader/stage-1",
  "bootloader/stage-2"
  ]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
debug = false
overflow-checks = false
# inherits = "release"


[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
debug = false
overflow-checks = false

